--- a/resources/sass/base/_color.scss
+++ b/resources/sass/base/_color.scss
@@ -16,7 +16,7 @@ $lightbrown: #666262;
 $dark: #2e2c2c;
 $light: #949494;
 $orange: #ff8200;
-$darkyellow: #3a3a38;
+$charcoal: #3a3a38;
 $skyblue: #2e90ff;
 $dark1: #343333;
 $zambesi: #626060;
@@ -45,7 +45,7 @@ $pastelOrange: #fd945e;
 $warmGrey: #9b9b9b;
 $blackTwo: #2c2b2b;
 $silver-two: #adafae;
-$warm-grey-three:#808080;
-$green:#15b643;
-$greyish-brown-two:#4a4a4a;
-$black-two:#2d2926;
+$warm-grey-three: #808080;
+$green: #15b643;
+$greyish-brown-two: #4a4a4a;
+$black-two: #2d2926;
