--- a/public/css/app.css
+++ b/public/css/app.css
@@ -675,7 +675,7 @@
 
 .text-crea {
   font-size: 18px;
-  font-family: "Montserrat-SemiBold";
+  font-family: "Montserrat-Black";
   color: #ffffff;
 }
 
@@ -1798,7 +1798,6 @@
   height: 43px;
   border-right: #0097a9;
   background-color: #ffffff;
-  font-family: "Montserrat-SemiBold";
   font-size: 16px;
   line-height: 2.5;
   color: #343333;
@@ -1815,7 +1814,6 @@
   line-height: 2.5;
   border-left: #0097a9;
   background-color: #ffffff;
-  font-family: "Montserrat-SemiBold";
   font-size: 16px;
   text-align: center;
   outline: none !important;
@@ -2434,16 +2432,26 @@ input[type=radio]:checked + .mujer-estilo1 {
   border: none;
 }
 
-input[type=radio]:checked + .si-estilo {
+/*input[type="radio"]:checked + .si-estilo {
+    background-color: $teal;
+    color: $white;
+    border: none;
+}
+input[type="radio"]:checked + .no-estilo {
+    background-color: $teal;
+    color: $white;
+    border: none;
+}*/
+
+input[type=radio]:checked + .switch-label {
   background-color: #0097a9;
   color: #ffffff;
   border: none;
+  font-family: "Montserrat-Black";
 }
 
-input[type=radio]:checked + .no-estilo {
-  background-color: #0097a9;
-  color: #ffffff;
-  border: none;
+.switch-label {
+  font-family: "Montserrat-SemiBold";
 }
 
 input[type=radio]:checked + .si-estilo1 {
@@ -3676,7 +3684,7 @@ input[type=radio]:checked + .no-estilo1 {
 
 .text-crea {
   font-size: 18px;
-  font-family: "Montserrat-SemiBold";
+  font-family: "Montserrat-Black";
   color: #ffffff;
 }
 
@@ -5009,5 +5017,9 @@ section {
 
 .pointer-all {
   pointer-events: all;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
