--- a/resources/sass/organisms/_container.scss
+++ b/resources/sass/organisms/_container.scss
@@ -179,7 +179,7 @@ iframe {
     }
     #schedule-item-date,
     #schedule-item-time {
-        width: 170px;
+        min-width: 170px;
     }
     #estimated-duration {
         min-width: 182px;
