--- a/resources/sass/atoms/_button.scss
+++ b/resources/sass/atoms/_button.scss
@@ -59,6 +59,15 @@
     background: $beige;
     border: 1px solid $beige;
 }
+.a-btn-border-tomato{
+    border: 2px solid $selecred;
+    background: $white;
+}
+.a-btn-tomato{
+    border: 2px solid $selecred;
+    background: $selecred;
+
+}
 
 .a-button-pill-teal-outline {
     border: 2px solid $teal;
