--- a/resources/sass/atoms/_text.scss
+++ b/resources/sass/atoms/_text.scss
@@ -77,6 +77,10 @@
     color: $repassgray;
     font-family: $MontserratBold;
 }
+.a-text-bold-warm-grey-three {
+    font-family: $MontserratBold;
+    color: $warm-grey-three;
+}
 
 .a-text-regular-blacktwo {
     color: $blackTwo;
