carrusel en pantalla de imágenes, funcionaidad para subir imágenes y detalles de estilos

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,281 @@
 @charset "UTF-8";
 
+/* Slider */
+
+.slick-slider {
+  position: relative;
+  display: block;
+  box-sizing: border-box;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  touch-action: pan-y;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.slick-list {
+  position: relative;
+  overflow: hidden;
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+
+.slick-list:focus {
+  outline: none;
+}
+
+.slick-list.dragging {
+  cursor: pointer;
+  cursor: hand;
+}
+
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+  transform: translate3d(0, 0, 0);
+}
+
+.slick-track {
+  position: relative;
+  left: 0;
+  top: 0;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.slick-track:before,
+.slick-track:after {
+  content: "";
+  display: table;
+}
+
+.slick-track:after {
+  clear: both;
+}
+
+.slick-loading .slick-track {
+  visibility: hidden;
+}
+
+.slick-slide {
+  float: left;
+  height: 100%;
+  min-height: 1px;
+  display: none;
+}
+
+[dir=rtl] .slick-slide {
+  float: right;
+}
+
+.slick-slide img {
+  display: block;
+}
+
+.slick-slide.slick-loading img {
+  display: none;
+}
+
+.slick-slide.dragging img {
+  pointer-events: none;
+}
+
+.slick-initialized .slick-slide {
+  display: block;
+}
+
+.slick-loading .slick-slide {
+  visibility: hidden;
+}
+
+.slick-vertical .slick-slide {
+  display: block;
+  height: auto;
+  border: 1px solid transparent;
+}
+
+.slick-arrow.slick-hidden {
+  display: none;
+}
+
+/* Slider */
+
+.slick-loading .slick-list {
+  background: #fff url(/images/vendor/slick-carousel/slick/ajax-loader.gif?c5cd7f5300576ab4c88202b42f6ded62) center center no-repeat;
+}
+
+/* Icons */
+
+@font-face {
+  font-family: "slick";
+  src: url(/fonts/vendor/slick-carousel/slick/slick.eot?ced611daf7709cc778da928fec876475);
+  src: url(/fonts/vendor/slick-carousel/slick/slick.eot?ced611daf7709cc778da928fec876475?#iefix) format("embedded-opentype"), url(/fonts/vendor/slick-carousel/slick/slick.woff?b7c9e1e479de3b53f1e4e30ebac2403a) format("woff"), url(/fonts/vendor/slick-carousel/slick/slick.ttf?d41f55a78e6f49a5512878df1737e58a) format("truetype"), url(/fonts/vendor/slick-carousel/slick/slick.svg?f97e3bbf73254b0112091d0192f17aec#slick) format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* Arrows */
+
+.slick-prev,
+.slick-next {
+  position: absolute;
+  display: block;
+  height: 20px;
+  width: 20px;
+  line-height: 0px;
+  font-size: 0px;
+  cursor: pointer;
+  background: transparent;
+  color: transparent;
+  top: 50%;
+  transform: translate(0, -50%);
+  padding: 0;
+  border: none;
+  outline: none;
+}
+
+.slick-prev:hover,
+.slick-prev:focus,
+.slick-next:hover,
+.slick-next:focus {
+  outline: none;
+  background: transparent;
+  color: transparent;
+}
+
+.slick-prev:hover:before,
+.slick-prev:focus:before,
+.slick-next:hover:before,
+.slick-next:focus:before {
+  opacity: 1;
+}
+
+.slick-prev.slick-disabled:before,
+.slick-next.slick-disabled:before {
+  opacity: 0.25;
+}
+
+.slick-prev:before,
+.slick-next:before {
+  font-family: "slick";
+  font-size: 20px;
+  line-height: 1;
+  color: white;
+  opacity: 0.75;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.slick-prev {
+  left: -25px;
+}
+
+[dir=rtl] .slick-prev {
+  left: auto;
+  right: -25px;
+}
+
+.slick-prev:before {
+  content: "\2190";
+}
+
+[dir=rtl] .slick-prev:before {
+  content: "\2192";
+}
+
+.slick-next {
+  right: -25px;
+}
+
+[dir=rtl] .slick-next {
+  left: -25px;
+  right: auto;
+}
+
+.slick-next:before {
+  content: "\2192";
+}
+
+[dir=rtl] .slick-next:before {
+  content: "\2190";
+}
+
+/* Dots */
+
+.slick-dotted.slick-slider {
+  margin-bottom: 30px;
+}
+
+.slick-dots {
+  position: absolute;
+  bottom: -25px;
+  list-style: none;
+  display: block;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
+
+.slick-dots li {
+  position: relative;
+  display: inline-block;
+  height: 20px;
+  width: 20px;
+  margin: 0 5px;
+  padding: 0;
+  cursor: pointer;
+}
+
+.slick-dots li button {
+  border: 0;
+  background: transparent;
+  display: block;
+  height: 20px;
+  width: 20px;
+  outline: none;
+  line-height: 0px;
+  font-size: 0px;
+  color: transparent;
+  padding: 5px;
+  cursor: pointer;
+}
+
+.slick-dots li button:hover,
+.slick-dots li button:focus {
+  outline: none;
+}
+
+.slick-dots li button:hover:before,
+.slick-dots li button:focus:before {
+  opacity: 1;
+}
+
+.slick-dots li button:before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "\2022";
+  width: 20px;
+  height: 20px;
+  font-family: "slick";
+  font-size: 6px;
+  line-height: 20px;
+  text-align: center;
+  color: black;
+  opacity: 0.25;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.slick-dots li.slick-active button:before {
+  color: black;
+  opacity: 0.75;
+}
+
 /*Tamaño de textos */
 
 .posi:hover > .describe {
@@ -132,6 +408,7 @@
 
 .text-plus {
   font-size: 18px;
+  z-index: 1;
 }
 
 .a-text-MBlack {
@@ -982,6 +1259,16 @@
 #error_birthday {
   position: absolute;
   bottom: -15%;
+}
+
+.current-slide-number {
+  display: flex;
+  width: 37px;
+  margin-left: auto;
+  height: 37px;
+  align-items: center;
+  justify-content: center;
+  border: 3px solid;
 }
 
 @font-face {
@@ -2127,9 +2414,7 @@
   -o-object-fit: cover;
      object-fit: cover;
   position: absolute;
-  width: 100%;
   left: 0;
-  height: 100%;
   bottom: 0;
 }
 
@@ -2313,6 +2598,10 @@
   width: 36px;
 }
 
+.add-photo {
+  z-index: 1;
+}
+
 /*THUMBNAILS DE IMÁGENES EN PROGRAMACIÓN GENERAL*/
 
 .thumbnail-image-program {
@@ -2354,7 +2643,21 @@
 }
 
 .image-synopsis-frame .add-photo {
-  width: 81px;
+  width: 126px;
+}
+
+.arrow-left-synopsis {
+  position: absolute;
+  left: 0;
+  transform: translate(-150%, -150%) rotate(180deg);
+  top: 50%;
+}
+
+.arrow-right-synopsis {
+  position: absolute;
+  right: 0;
+  transform: translate(150%, -150%);
+  top: 50%;
 }
 
 @font-face {
@@ -2758,7 +3061,7 @@ input[type=radio]:checked + .no-estilo1 {
 }
 
 .bor {
-  border: solid 2px #979797;
+  border: dashed 4px #d5d7d7;
 }
 
 .cuadro-dia {
@@ -3210,6 +3513,7 @@ input[type=radio]:checked + .no-estilo1 {
 
 .text-plus {
   font-size: 18px;
+  z-index: 1;
 }
 
 .a-text-MBlack {
@@ -4062,6 +4366,16 @@ input[type=radio]:checked + .no-estilo1 {
   bottom: -15%;
 }
 
+.current-slide-number {
+  display: flex;
+  width: 37px;
+  margin-left: auto;
+  height: 37px;
+  align-items: center;
+  justify-content: center;
+  border: 3px solid;
+}
+
 .login-BO {
   height: 90vh;
   display: flex;
@@ -4767,6 +5081,11 @@ iframe {
   /* Black w/ opacity */
 }
 
+.current-slide-container {
+  width: 1000px;
+  margin: auto;
+}
+
 @font-face {
   font-family: "Montserrat-Light";
   src: url(/backoffice/public/fonts/Montserrat-Light/Montserrat-Light.eot);
@@ -5095,5 +5414,45 @@ section {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.synopsis-image-slider {
+  width: 1000px !important;
+}
+
+.synopsis-image-slider .slick-dots {
+  position: static;
+  margin-top: 24px;
+  text-align: right;
+}
+
+.synopsis-image-slider .slick-slide {
+  height: 342px !important;
+}
+
+.synopsis-image-slider .slick-slide div {
+  height: 100% !important;
+}
+
+.synopsis-image-slider .slick-dots li {
+  height: 37px;
+  width: 37px;
+}
+
+.synopsis-image-slider .slick-dots .slick-active {
+  background-color: #0097a9;
+}
+
+.synopsis-image-slider .slick-dots .slick-active p {
+  color: #ffffff !important;
+}
+
+.slider-pagination-item {
+  border: solid 3px #0097a9;
+  width: 37px;
+  height: 37px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
