--- a/resources/sass/organisms/_container.scss
+++ b/resources/sass/organisms/_container.scss
@@ -228,3 +228,8 @@ iframe {
     background-color: rgb(102, 101, 101); /* Fallback color */
     background-color: rgba(102, 101, 101, 0.4); /* Black w/ opacity */
 }
+
+.current-slide-container {
+    width: 1000px;
+    margin: auto;
+}
