--- a/resources/sass/atoms/_separator.scss
+++ b/resources/sass/atoms/_separator.scss
@@ -1,35 +1,33 @@
-
 @import "../base/color";
 .line {
     width: 100%;
     height: 1px;
     margin: auto;
     background-color: $lightteal;
-  }
-  
-  .separacion:after {
+}
+
+.separacion:after {
     content: " | ";
     padding: 0 10px;
-  }
-  .separacion1:after {
+}
+.separacion1:after {
     content: " | ";
     padding-left: 70px;
-  }
+}
 
-  .br-r{
+.br-r {
     border-right: 3px solid $beige;
     margin-right: 10px;
     padding-right: 15px;
-  }
- .bb-r{
-   border-bottom: 3px solid $beige;
-   margin-bottom: 10px;
- }
- .separationhr{
-  background:$lightpink;
-  border: 2px solid $lightpink;
- }
- .bor{
-  border: solid 2px $morelightgray;
- }
- 
+}
+.bb-r {
+    border-bottom: 3px solid $beige;
+    margin-bottom: 10px;
+}
+.separationhr {
+    background: $lightpink;
+    border: 2px solid $lightpink;
+}
+.bor {
+    border: dashed 4px $silver;
+}
