--- a/resources/sass/atoms/_text.scss
+++ b/resources/sass/atoms/_text.scss
@@ -20,6 +20,7 @@
 }
 .text-plus {
     font-size: 18px;
+    z-index: 1;
 }
 .a-text-MBlack {
     font-family: $MontserratBlack;
@@ -790,4 +791,14 @@
 #error_birthday {
     position: absolute;
     bottom: -15%;
+}
+
+.current-slide-number {
+    display: flex;
+    width: 37px;
+    margin-left: auto;
+    height: 37px;
+    align-items: center;
+    justify-content: center;
+    border: 3px solid;
 }
