--- a/resources/sass/atoms/_button.scss
+++ b/resources/sass/atoms/_button.scss
@@ -59,6 +59,11 @@
     background: $beige;
     border: 1px solid $beige;
 }
+.btn-light {
+    color: $greyish-brown-two;
+    background-color: transparent;
+    border-color: transparent;
+}
 .a-btn-border-tomato{
     border: 2px solid $selecred;
     background: $white;
