--- a/resources/sass/atoms/_text.scss
+++ b/resources/sass/atoms/_text.scss
@@ -117,7 +117,10 @@
     font-family: $MontserratBlack;
     color: $greyish-brown-two;
 }
-
+.a-text-black-warmrey{
+    font-family: $MontserratBlack;
+    color:  $warmGrey;
+}
 .a-text-medium-orange {
     color: $pastelOrange;
     font-family: $MontserratMedium;
