--- a/resources/sass/atoms/_img.scss
+++ b/resources/sass/atoms/_img.scss
@@ -351,3 +351,10 @@
     transform: translate(150%, -150%);
     top: 50%;
 }
+
+.loader-table {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, 150%);
+}
