--- a/resources/sass/organisms/_container.scss
+++ b/resources/sass/organisms/_container.scss
@@ -233,3 +233,12 @@ iframe {
     width: 1000px;
     margin: auto;
 }
+
+.loader-container {
+    z-index: 1;
+    background: white;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    opacity: 0.5;
+}
