--- a/resources/sass/organisms/_container.scss
+++ b/resources/sass/organisms/_container.scss
@@ -242,3 +242,13 @@ iframe {
     width: 100%;
     opacity: 0.5;
 }
+
+.loader-view-container {
+    z-index: 1;
+    background: white;
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    opacity: 0.5;
+    top: 0;
+}
